@@ -1,4 +1,7 @@
 2011-04-07 lucas
+* Removed obsolete Start button.
+
+2011-04-07 lucas
 * Load the CSS file to customize the new user interface.
 
 2011-04-07 lucas
